--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,5 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.4.6'
     implementation 'com.google.android.play:core:1.6.4'
     implementation 'com.github.dhaval2404:imagepicker:1.6'
-
+    implementation 'com.shreyaspatil:MaterialNavigationView:1.2'
 }
