--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.google.android.play:core:1.6.4'
     implementation 'com.github.dhaval2404:imagepicker:1.6'
     implementation 'com.shreyaspatil:MaterialNavigationView:1.2'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.6'
 }
