--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".activity.Login" android:theme="@style/MTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
 
         <activity android:name=".activity.orderAcivity" android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activity.RegistrerUser" android:theme="@style/MTheme"/>
-        <activity android:name=".activity.ListFruits" android:theme="@style/MTheme"/>
+        <activity android:name=".activity.ListFruits" android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".activity.UpdateActivity" android:theme="@style/MTheme"/>
     </application>
 
