--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.github.dhaval2404:imagepicker:1.6'
     implementation 'com.shreyaspatil:MaterialNavigationView:1.2'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 }
