--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,5 @@ dependencies {
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation "androidx.annotation:annotation:1.1.0"
-
+    implementation "androidx.core:core:1.3.0-alpha01"
 }
